fix header spacing in summary report with issue details
git-svn-id: svn+ssh://svn.code.sf.net/p/webissues/code/trunk/client@1978 c8fa975d-6fd4-4e76-b3b8-1a99b2ee3549

--- a/src/resources/style.css
+++ b/src/resources/style.css
@@ -25,6 +25,7 @@ h1 {
 h2 {
   font-size: 130%;
   line-height: 130%;
+  margin-top: 1em;
   margin-bottom: 0.75em;
 }
 
